schemas/v0.2.3/docs/README.md
# README

## Top-level Schemas

* [Dataset color map](./dataset-colormap.md"Definition of a dataset color map") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/dataset-colormap.schema.json`

* [Dataset colorscale](./dataset-colorscale.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/dataset-colorscale.schema.json`

* [Dataset variable definition](./dataset-variable.md"Definition of a dataset variable") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/dataset-variable.schema.json`

* [Dataset variable domain](./dataset-variable-domain.md"Definition of a variable domain") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/dataset-variable-domain.schema.json`

* [Insula JSON dataset](./insula-json-dataset.md"Insula JSON dataset configuration") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-json-dataset.schema.json`

* [Insula JSON dataset group](./insula-json-datasets-group.md"Insula JSON dataset group configuration") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-json-datasets-group.schema.json`

* [Insula Perception datasets config](./insula-perception-datasets-config.md"Insula Perception datasets config") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-perception-datasets-config.schema.json`

* [Insula raster dataset](./insula-json-raster-dataset.md"Insula JSON raster dataset configuration") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-json-raster-dataset.schema.json`

* [Insula vector dataset](./insula-json-vector-dataset.md"Insula JSON vector dataset configuration") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-json-vector-dataset.schema.json`

* [Measured quantity](./measured-quantity.md"The quantity measured by a variable") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/measured-quantity.schema.json`

* [Platform collection](./platform-collection.md"Platform collection metadata") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/platform-collection.schema.json`

* [Raster collection](./raster-collection.md"Definition of a raster collection") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/raster-collection.schema.json`

* [Vector collection](./vector-collection.md"Definition of a vector collection") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-collection.schema.json`

* [Vector collection render config](./vector-collection-render-config.md"Definition of vector collection rendering configuration") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-collection-render-config.schema.json`

* [Vector dataset time dynamic data](./insula-vector-dataset-time-dynamic-data.md"Definition of a vector dataset time dynamic data") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-vector-dataset-time-dynamic-data.schema.json`

* [Vector feature descriptor](./vector-feature-descriptor.md"Metadata of a vector data source") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-feature-descriptor.schema.json`

* [Vector feature property](./vector-feature-property.md"Definition of a vector feature property") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-feature-property.schema.json`

## Other Schemas

### Objects

* [Band visualization configuration](./raster-collection-defs-band-visualization-configuration.md"Define band additional parameters used for visualization") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/raster-collection.schema.json#/$defs/rasterBandVisualizationConfig`

* [Boolean feature attribute](./vector-feature-property-defs-boolean-feature-attribute.md"Definition of vector feature boolean property specific attributes") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-feature-property.schema.json#/$defs/booleanProperty`

* [Categorical domain](./dataset-variable-domain-defs-categorical-domain.md"Definition of a categorical variable domain") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/dataset-variable-domain.schema.json#/$defs/categoricalDomain`

* [Categorical domain item](./dataset-variable-domain-defs-categorical-domain-properties-categorical-domain-values-categorical-domain-item.md"Definition of a categorical domain item") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/dataset-variable-domain.schema.json#/$defs/categoricalDomain/properties/values/items`

* [Color map range](./dataset-colormap-properties-color-map-range.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/dataset-colormap.schema.json#/properties/range`

* [Dataset common properties](./insula-json-dataset-defs-dataset-common-properties.md"Dataset common properties") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-json-dataset.schema.json#/$defs/common`

* [Date feature attribute](./vector-feature-property-defs-date-feature-attribute.md"Definition of vector feature date property specific attributes") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-feature-property.schema.json#/$defs/dateProperty`

* [Enum feature attribute](./vector-feature-property-defs-enum-feature-attribute.md"Definition of vector feature enum property specific attributes") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-feature-property.schema.json#/$defs/enumProperty`

* [Numeric domain](./dataset-variable-domain-defs-numeric-domain.md"Definition of a numeric variable domain") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/dataset-variable-domain.schema.json#/$defs/numericDomain`

* [Numeric feature attribute](./vector-feature-property-defs-numeric-feature-attribute.md"Definition of vector feature numeric property specific attributes") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-feature-property.schema.json#/$defs/numericProperty`

* [Raster band variable](./raster-collection-defs-raster-band-allof-raster-band-variable.md"Raster band variable definition") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/raster-collection.schema.json#/$defs/rasterBand/allOf/0`

* [Raster collection tag](./platform-collection-defs-raster-collection-tag.md"The raster collection tag") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/platform-collection.schema.json#/$defs/platformRasterCollectionTypeObject`

* [Raster layer configuration](./insula-json-raster-dataset-allof-raster-layer-configuration.md"Geoserver raster layer information") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-json-raster-dataset.schema.json#/allOf/1`

* [Raster render mode](./vector-collection-render-config-defs-raster-render-mode.md"The vector will be rasterized for rendering") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-collection-render-config.schema.json#/$defs/rasterRenderMode`

* [Time domain](./dataset-variable-domain-defs-time-domain.md"Definition of a date variable domain") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/dataset-variable-domain.schema.json#/$defs/timeDomain`

* [Time dynamic data foreign key](./insula-vector-dataset-time-dynamic-data-defs-time-dynamic-data-foreign-key.md"Define the relation between the source and the target collection") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-vector-dataset-time-dynamic-data.schema.json#/$defs/timeDynamicDataSourceForeignKey`

* [Vector collection tag](./platform-collection-defs-vector-collection-tag.md"The vector collection tag") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/platform-collection.schema.json#/$defs/platformVectorCollectionTypeObject`

* [Vector feature property common attributes](./vector-feature-property-defs-vector-feature-property-common-attributes.md"Definition of vector feature property common attribute") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-feature-property.schema.json#/$defs/common`

* [Vector feature string property](./vector-feature-property-defs-vector-feature-string-property.md"Definition of vector feature string property specific attributes") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-feature-property.schema.json#/$defs/stringProperty`

* [Vector layer configuration](./insula-json-vector-dataset-allof-vector-layer-configuration.md"Geoserver vector layer information") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-json-vector-dataset.schema.json#/allOf/1`

* [Vector render mode](./vector-collection-render-config-defs-vector-render-mode.md"The vector will be rendered on the client side") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-collection-render-config.schema.json#/$defs/vectorRenderMode`

* [Vector render mode options](./vector-collection-render-config-defs-vector-render-mode-options.md"The vector render mode rendering options") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-collection-render-config.schema.json#/$defs/vectorRenderModeOptions`

* [Vector time dynamic data source](./insula-vector-dataset-time-dynamic-data-defs-vector-time-dynamic-data-source.md"Vector time dynamic data source") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-vector-dataset-time-dynamic-data.schema.json#/$defs/timeDynamicDataSource`

### Arrays

* [Categorical domain values](./dataset-variable-domain-defs-categorical-domain-properties-categorical-domain-values.md"The domain allowed values") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/dataset-variable-domain.schema.json#/$defs/categoricalDomain/properties/values`

* [Datasets list](./insula-json-datasets-group-properties-datasets-list.md"The list of datasets for the group") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-json-datasets-group.schema.json#/properties/datasets`

* [Feature attributes](./vector-collection-properties-feature-attributes.md"The feature attributes definitions") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-collection.schema.json#/properties/feautreAttributes`

* [Feature attributes](./vector-feature-descriptor-properties-feature-attributes.md"The feature attributes definitions") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/vector-feature-descriptor.schema.json#/properties/properties`

* [Raster bands](./raster-collection-properties-raster-bands.md"The raster bands definitions") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/common/raster-collection.schema.json#/properties/bands`

* [Target dimension attributes](./insula-vector-dataset-time-dynamic-data-properties-target-dimension-attributes.md"Define the target collection attributes to use as dimensions") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-vector-dataset-time-dynamic-data.schema.json#/properties/targetDimensionAttributes`

* [Target layer feature attributes](./insula-vector-dataset-time-dynamic-data-defs-vector-time-dynamic-data-source-properties-target-layer-feature-attributes.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-vector-dataset-time-dynamic-data.schema.json#/$defs/timeDynamicDataSource/properties/targetAttributes`

* [Time dynamic data sources](./insula-vector-dataset-time-dynamic-data-properties-time-dynamic-data-sources.md"The list of tyme dynamic attributes data sources") – `https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-vector-dataset-time-dynamic-data.schema.json#/properties/dataSources`

## Version Note

The schemas linked above follow the JSON Schema Spec version: `https://json-schema.org/draft/2020-12/schema`
