schemas/v0.2.6/docs/README.md
# README

## Top-level Schemas

* [Dataset color map](./dataset-colormap.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/dataset-colormap.schema.json`

* [Dataset colorscale](./dataset-colorscale.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/dataset-colorscale.schema.json`

* [Dataset variable definition](./dataset-variable.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/dataset-variable.schema.json`

* [Dataset variable domain](./dataset-variable-domain.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/dataset-variable-domain.schema.json`

* [Insula JSON dataset](./insula-json-dataset.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-json-dataset.schema.json`

* [Insula JSON dataset group](./insula-json-datasets-group.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-json-datasets-group.schema.json`

* [Insula Perception datasets config](./insula-perception-datasets-config.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-perception-datasets-config.schema.json`

* [Insula platform STAC Extension](./insula-stac-extension.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/stac/insula-stac-extension.schema.json`

* [Insula raster dataset](./insula-json-raster-dataset.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-json-raster-dataset.schema.json`

* [Insula vector dataset](./insula-json-vector-dataset.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-json-vector-dataset.schema.json`

* [Measured quantity](./measured-quantity.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/measured-quantity.schema.json`

* [Platform collection](./platform-collection.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/platform-collection.schema.json`

* [Raster collection](./raster-collection.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/raster-collection.schema.json`

* [Vector collection](./vector-collection.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-collection.schema.json`

* [Vector collection render config](./vector-collection-render-config.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-collection-render-config.schema.json`

* [Vector collection time dynamic data](./insula-vector-collection-time-dynamic-data.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/stac/insula-vector-collection-time-dynamic-data.schema.json`

* [Vector dataset time dynamic data](./insula-vector-dataset-time-dynamic-data.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-vector-dataset-time-dynamic-data.schema.json`

* [Vector feature descriptor](./vector-feature-descriptor.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-feature-descriptor.schema.json`

* [Vector feature property](./vector-feature-property.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-feature-property.schema.json`

## Other Schemas

### Objects

* [Band visualization configuration](./raster-collection-defs-band-visualization-configuration.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/raster-collection.schema.json#/$defs/rasterBandVisualizationConfig`

* [Boolean feature attribute](./vector-feature-property-defs-boolean-feature-attribute.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-feature-property.schema.json#/$defs/booleanProperty`

* [Categorical domain](./dataset-variable-domain-defs-categorical-domain.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/dataset-variable-domain.schema.json#/$defs/categoricalDomain`

* [Categorical domain item](./dataset-variable-domain-defs-categorical-domain-properties-categorical-domain-values-categorical-domain-item.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/dataset-variable-domain.schema.json#/$defs/categoricalDomain/properties/values/items`

* [Collection type attributes](./insula-stac-extension-oneof-basic-collection-properties-allof-collection-type-attributes.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/stac/insula-stac-extension.schema.json#/oneOf/0/allOf/0`

* [Color map range](./dataset-colormap-properties-color-map-range.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/dataset-colormap.schema.json#/properties/range`

* [Dataset common properties](./insula-json-dataset-defs-dataset-common-properties.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-json-dataset.schema.json#/$defs/common`

* [Date feature attribute](./vector-feature-property-defs-date-feature-attribute.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-feature-property.schema.json#/$defs/dateProperty`

* [Enum feature attribute](./vector-feature-property-defs-enum-feature-attribute.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-feature-property.schema.json#/$defs/enumProperty`

* [Insula STAC collection fields](./insula-stac-extension-defs-insula-stac-collection-fields.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/stac/insula-stac-extension.schema.json#/$defs/fields`

* [Numeric domain](./dataset-variable-domain-defs-numeric-domain.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/dataset-variable-domain.schema.json#/$defs/numericDomain`

* [Numeric feature attribute](./vector-feature-property-defs-numeric-feature-attribute.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-feature-property.schema.json#/$defs/numericProperty`

* [Raster band variable](./raster-collection-defs-raster-band-allof-raster-band-variable.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/raster-collection.schema.json#/$defs/rasterBand/allOf/0`

* [Raster collection tag](./platform-collection-defs-raster-collection-tag.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/platform-collection.schema.json#/$defs/platformRasterCollectionTypeObject`

* [Raster layer configuration](./insula-json-raster-dataset-allof-raster-layer-configuration.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-json-raster-dataset.schema.json#/allOf/1`

* [Raster render mode](./vector-collection-render-config-defs-raster-render-mode.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-collection-render-config.schema.json#/$defs/rasterRenderMode`

* [STAC extensions attributes](./insula-stac-extension-defs-stac-extensions-attributes.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/stac/insula-stac-extension.schema.json#/$defs/stac_extensions`

* [Time domain](./dataset-variable-domain-defs-time-domain.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/dataset-variable-domain.schema.json#/$defs/timeDomain`

* [Time dynamic data foreign key](./insula-vector-collection-time-dynamic-data-defs-time-dynamic-data-foreign-key.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/stac/insula-vector-collection-time-dynamic-data.schema.json#/$defs/timeDynamicDataSourceForeignKey`

* [Time dynamic data foreign key](./insula-vector-dataset-time-dynamic-data-defs-time-dynamic-data-foreign-key.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-vector-dataset-time-dynamic-data.schema.json#/$defs/timeDynamicDataSourceForeignKey`

* [Vector collection tag](./platform-collection-defs-vector-collection-tag.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/platform-collection.schema.json#/$defs/platformVectorCollectionTypeObject`

* [Vector feature property common attributes](./vector-feature-property-defs-vector-feature-property-common-attributes.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-feature-property.schema.json#/$defs/common`

* [Vector feature string property](./vector-feature-property-defs-vector-feature-string-property.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-feature-property.schema.json#/$defs/stringProperty`

* [Vector layer configuration](./insula-json-vector-dataset-allof-vector-layer-configuration.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-json-vector-dataset.schema.json#/allOf/1`

* [Vector render mode](./vector-collection-render-config-defs-vector-render-mode.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-collection-render-config.schema.json#/$defs/vectorRenderMode`

* [Vector render mode options](./vector-collection-render-config-defs-vector-render-mode-options.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-collection-render-config.schema.json#/$defs/vectorRenderModeOptions`

* [Vector time dynamic data source](./insula-vector-collection-time-dynamic-data-defs-vector-time-dynamic-data-source.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/stac/insula-vector-collection-time-dynamic-data.schema.json#/$defs/timeDynamicDataSource`

* [Vector time dynamic data source](./insula-vector-dataset-time-dynamic-data-defs-vector-time-dynamic-data-source.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-vector-dataset-time-dynamic-data.schema.json#/$defs/timeDynamicDataSource`

### Arrays

* [Categorical domain values](./dataset-variable-domain-defs-categorical-domain-properties-categorical-domain-values.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/dataset-variable-domain.schema.json#/$defs/categoricalDomain/properties/values`

* [Datasets list](./insula-json-datasets-group-properties-datasets-list.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-json-datasets-group.schema.json#/properties/datasets`

* [Feature attributes](./vector-collection-properties-feature-attributes.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-collection.schema.json#/properties/feautreAttributes`

* [Feature attributes](./vector-feature-descriptor-properties-feature-attributes.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/vector-feature-descriptor.schema.json#/properties/properties`

* [Raster bands](./raster-collection-properties-raster-bands.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/common/raster-collection.schema.json#/properties/bands`

* [STAC extensions array](./insula-stac-extension-defs-stac-extensions-attributes-properties-stac-extensions-array.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/stac/insula-stac-extension.schema.json#/$defs/stac_extensions/properties/stac_extensions`

* [Target dimension attributes](./insula-vector-collection-time-dynamic-data-properties-target-dimension-attributes.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/stac/insula-vector-collection-time-dynamic-data.schema.json#/properties/targetDimensionAttributes`

* [Target dimension attributes](./insula-vector-dataset-time-dynamic-data-properties-target-dimension-attributes.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-vector-dataset-time-dynamic-data.schema.json#/properties/targetDimensionAttributes`

* [Target layer feature attributes](./insula-vector-dataset-time-dynamic-data-defs-vector-time-dynamic-data-source-properties-target-layer-feature-attributes.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-vector-dataset-time-dynamic-data.schema.json#/$defs/timeDynamicDataSource/properties/targetAttributes`

* [Time dynamic data sources](./insula-vector-collection-time-dynamic-data-properties-time-dynamic-data-sources.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/stac/insula-vector-collection-time-dynamic-data.schema.json#/properties/dataSources`

* [Time dynamic data sources](./insula-vector-dataset-time-dynamic-data-properties-time-dynamic-data-sources.md) – `https://cgi-italy.github.io/insula/schemas/v0.2.6/apps/insula-vector-dataset-time-dynamic-data.schema.json#/properties/dataSources`

## Version Note

The schemas linked above follow the JSON Schema Spec version: `https://json-schema.org/draft/2020-12/schema`
